force-app/main/default/objects/Employee__c/fields/Candidate_Converted_On__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Converted_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Candidate Converted On</label>
    <type>DateTime</type>
</CustomField>