force-app/main/default/objects/Employee__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Activation</fullName>
                <default>true</default>
                <label>Pending Activation</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>On Leave</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>