force-app/main/default/objects/Employee__c/fields/Identity_Key__c.field-meta.xml
<CustomField>
    <fullName>Identity_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Identity Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>