force-app/main/default/objects/Employee__c/fields/Identity_Mode__c.field-meta.xml
<CustomField>
    <fullName>Identity_Mode__c</fullName>
    <label>Identity Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Experience Only</fullName>
                <default>true</default>
                <label>Experience Only</label>
            </value>
            <value>
                <fullName>Internal Only</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>