force-app/main/default/objects/Employee__c/fields/Is_External_Login_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_External_Login_Only__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is External Login Only</label>
    <type>Checkbox</type>
</CustomField>