force-app/main/default/objects/Employee__c/fields/Source_Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Source_Job_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Job Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>